add i18next eslint plugin and stylelint

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
+@import 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap';
 @import 'reset';
 @import 'variables/global';
 @import 'themes/dark';
@@ -7,10 +6,8 @@
 
 .app {
   font: var(--font-m);
-
   background: var(--bg-color);
   color: var(--primary-color);
-
   min-height: 100vh;
 }
 
