--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap';
 @import 'reset';
 @import 'variables/global';
 @import 'themes/dark';
