--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,11 +6,7 @@
   transition: width 0.3s;
 }
 
-.collapsed {
-  width: var(--sidebar-width-collapsed);
-}
-
-.switchers{
+.switchers {
   position: absolute;
   bottom: 20px;
   display: flex;
@@ -18,6 +14,55 @@
   width: 100%;
 }
 
-.themeSwitcher{
+.themeSwitcher {
   margin-right: 10px;
+}
+
+.collapsedBtn {
+  position: absolute;
+  bottom: 40px;
+  right: -32px;
+}
+
+.items {
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+
+  &:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
+.icon {
+  margin-right: 5px;
+  fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .themeSwitcher {
+    margin-right: 0;
+  }
+
+  .link {
+    & span {
+      opacity: 0;
+      transition: opacity 0.2s;
+      width: 0;
+    }
+  }
 }
