create modal with portal, new button theme, fix withThemedecorator for storybook

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,13 +4,15 @@
 @import 'themes/dark';
 @import 'themes/normal';
 
-.app {
+body {
   font: var(--font-m);
-  background: var(--bg-color);
-  color: var(--primary-color);
-  min-height: 100vh;
 }
 
+.app {
+  color: var(--primary-color);
+  background: var(--bg-color);
+  min-height: 100vh;
+}
 
 .content-page {
   display: flex;
