--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -12,4 +12,10 @@
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
+
+  // z - индексы
+  --modal-z-index: 1000;
+
+  // Оверлеи
+  --overlay-color: rgba(0 0 0 / 60%);
 }
