--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -5,10 +5,15 @@
   padding: 7px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
   border: none;
   background: none;
   outline: none;
+}
+
+.clearInverted {
+  color: var(--inverted-primary-color);
 }
 
 .outline {
